# PyTorch-Wavelet-Toolbox

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  CITATION.bib  CONTRIBUTING.md  LICENSE  README.md  README.rst  noxfile.py  profile.txt  profile_cumtime2.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: codeql.yml  tests.yml
docs/: citation.rst  common_wavelets.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  intro.rst  intro_boundary_wavelets.rst  intro_cwt.rst  literature.bib  literature.rst  modules.rst  ptwt.rst  readme_link.rst  release_notes.rst  requirements.txt
docs/favicon/: plot_shannon.py
docs/ref/: boundary.rst  conv-fwt.rst  conv-inverse-fwt.rst  cwt.rst  index.rst  matrix-fwt.rst  matrix-inverse-fwt.rst  other.rst  packets.rst  return-types.rst  sparse-math.rst  stationary.rst  wavelets-learnable.rst
examples/: learnable_wavelets.py  mnist_compression.py  readme.md  test.py  wavelet_linear.py
examples/continuous_chirp_analysis/: cwt_chirp_analysis.py  readme.md
examples/continuous_signal_analysis/: adaptive_cwt.py
examples/deepfake_analysis/: README.md  packet_plot.py
examples/network_compression/: mnist_compression.py  readme.md  wavelet_linear.py
examples/speed_tests/: readme.md  run_all.sh  timeitconv_1d.py  timeitconv_1dmat.py  timeitconv_2d.py  timeitconv_2d_separable.py  timeitconv_2dmat.py  timeitconv_3d.py  timeitcwt_1d.py
examples/speed_tests/cotter_code/: lowlevel.py  transform2d.py  utils.py
examples/speed_tests/figs/: timeitconv1d.tex  timeitconv2d.tex  timeitconv2d_sep.tex
examples/wavelet_packet_chirp_analysis/: chirp_analysis.py  readme.md
ptwt/: __init__.py  conv_transform.py  learnable_wavelets.py  matmul_transform.py
src/: conv_transform.py  conv_transform_2.py  matmul_transform.py  sparse_matmul_transform.py
src/ptwt/: __init__.py  _mackey_glass.py  _stationary_transform.py  _util.py  constants.py  continuous_transform.py  conv_transform.py  conv_transform_2.py  conv_transform_3.py  cwt.py  learnable_wavelets.py  mackey_glass.py  matmul_transform.py  matmul_transform_2.py  matmul_transform_2d.py  matmul_transform_3.py  nn.py  packets.py  separable_conv_transform.py  sparse_mat.py  sparse_math.py  stationary_transform.py  version.py  wavelets_learnable.py
tests/: _mackey_glass.py  mackey_glass.py  test_boundary_filters.py  test_conv_fwt.py  test_convolution_fwt.py  test_convolution_fwt_3.py  test_cwt.py  test_dtypes.py  test_jit.py  test_matrix_fwt.py  test_matrix_fwt_2.py  test_matrix_fwt_3.py  test_matrix_fwt_3d.py  test_packets.py  test_separable_conv_fwt.py  test_sparse_math.py  test_swt.py  test_util.py  test_wavelet.py  wavelet_test.py
