##########################
# Setup.py Configuration #
##########################
[metadata]
name = ptwt
version = 0.0.3-dev
description = Differentiable and gpu enabled fast wavelet transforms in PyTorch
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/v0lta/PyTorch-Wavelet-Toolbox
download_url = https://github.com/v0lta/PyTorch-Wavelet-Toolbox/releases
project_urls =
    Bug Tracker = https://github.com/v0lta/PyTorch-Wavelet-Toolbox/issues
    Source Code = https://github.com/v0lta/PyTorch-Wavelet-Toolbox

# Author information
author = Moritz Wolter
author_email = moritz@wolter.tech
maintainer = Moritz Wolter
maintainer_email = moritz@wolter.tech

# License information
license_file = LICENSE

[options]
install_requires =
    PyWavelets
    torch
    scipy
    matplotlib

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
