##########################
# Setup.py Configuration #
##########################
[metadata]
name = ptwt
version = 0.1.7-dev
description = Differentiable and gpu enabled fast wavelet transforms in PyTorch
long_description = file: README.rst
long_description_content_type = text/x-rst

# URLs associated with the project
url = https://github.com/v0lta/PyTorch-Wavelet-Toolbox
download_url = https://github.com/v0lta/PyTorch-Wavelet-Toolbox/releases
project_urls =
    Bug Tracker = https://github.com/v0lta/PyTorch-Wavelet-Toolbox/issues
    Source Code = https://github.com/v0lta/PyTorch-Wavelet-Toolbox


keywords =
    Wavelets
    Wavelet Transform
    Fast Wavelet Transform
    Boundary Wavelets
    PyTorch

# Author information
author = Moritz Wolter and Felix Blanke
author_email = moritz@wolter.tech
maintainer = Moritz Wolter and Felix Blanke
maintainer_email = moritz@wolter.tech

# License information
license = EUPL-1.2
license_files = LICENSE

classifiers =
    License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
install_requires =
    PyWavelets
    torch
    scipy>=1.10
    pooch
    matplotlib
    numpy
    pytest
    nox

python_requires = >=3.9

packages = find:
package_dir =
    = src

[options.packages.find]
where = src


##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = google
strictness = short
